# council-meeting-agenda-scraper

./: .bumpversion.toml  .env.example  .gitignore  README.md  _dataclasses.py  agents.md  base_scraper.py  custom_types.py  database.py  discord.py  discord_bot.py  functions.py  infocouncil_scraper.py  llm.py  llm_local_play.py  logging_config.py  main.py  pyproject.toml  regex.py  regexes.py  type_module.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: scraper.md
.github/workflows/: github-cached-ci.yml  github-cd.yml  github-ci-cd.yml  github-ci.yml  run-agenda.yml
aus_council_scrapers/: __init__.py  base.py  constants.py  data.py  database.py  discord_bot.py  logging_config.py  main.py  utils.py
aus_council_scrapers/scrapers/: __init__.py
council_scrapers/: __init__.py  base.py  constants.py  database.py  logging_config.py  main.py  utils.py
council_scrapers/scrapers/: __init__.py
docs/: agenda_and_minutes.md  council_businesspaper_data.csv  councils.md  discord.md  national_councils_dump.txt  scraper_template.py  sydneyCouncils.md
scrapers/: __init__.py  banyule.py  boroondara.py  darebin.py  glen_eira.py  index.py  maribyrnong.py  melbourne.py  merribek.py  moonee_valley.py  mooneevalley.py  parramatta.py  port-phillip.py  whitehorse.py
scrapers/nsw/: bayside_nsw.py  camden.py  campbelltown.py  canada_bay.py  canterbury_bankstown.py  cumberland.py  hornsby.py  hunters_hill.py  innerwest.py  kuringgai.py  lane_cove.py  liverpool.py  north_sydney.py  northern_beaches.py  northernbeaches.py  parramatta.py  penrith_city.py  randwick.py  ryde.py  waverley.py  waverly.py  willoughby.py  woollahra.py
scrapers/vic/: banyule.py  bayside_vic.py  boroondara.py  darebin.py  glen_eira.py  hobsons_bay.py  kingston.py  manningham.py  maribyrnong.py  melbourne.py  merribek.py  monash.py  moonee_valley.py  port_phillip.py  stonnington.py  whitehorse.py  yarra.py
scripts/: migrate_database.py
test-cases/: boroondara-replay_data.json  canada_bay-replay_data.json  canada_bay-result.json  darebin-replay_data.json  glen_eira-replay_data.json  merri_bek-replay_data.json  parramatta-result.json  port_philip-result.json  waverley-replay_data.json
tests/: scraper_test.py  test_agenda_minutes.py  test_skip_logic.py
tests/test-cases/: banyule-replay_data.json  banyule-result.json  bayside_vic-replay_data.json  bayside_vic-result.json  boroondara-replay_data.json  boroondara-result.json  burwood-replay_data.json  burwood-result.json  camden-replay_data.json  camden-result.json  campbelltown-replay_data.json  campbelltown-result.json  (+54 more)
(+85 files in other folders)
