[tool.poetry]
name = "council-agenda-getter"
version = "0.1.0"
description = ""
authors = ["Jonathan O'Brien <jonathan@jonobri.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pypdf = "^3.17.4"
selenium = "^4.16.0"
python-dotenv = "^1.0.0"
ollama = "^0.1.4"
openai = "^1.10.0"
langchain = "^0.1.4"
langchain-community = "^0.0.16"
tiktoken = "^0.5.2"
langchain-openai = "^0.0.5"
chromadb = "^0.4.22"
pymupdf = "^1.23.20"
black = "^24.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
