[tool.poetry]
name = "aus_council_scrapers"
version = "0.1.0"
description = ""
authors = ["Jonathan O'Brien <jonathan@jonobri.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pypdf = "^3.17.4"
selenium = "^4.16.0"
python-dotenv = "^1.0.0"
pymupdf = "^1.23.20"
black = "^24.1.1"
onnxruntime = "^1.17.0"
"discord.py" = "^2.3.2"
pytest-timeout = "^2.2.0"
pytz = "^2024.1"
dateutils = "^0.6.12"

[tool.poetry.group.dev.dependencies]
bump-my-version = "0.18.3"
pytest = "^7.4.3"
flake8 = "^7.0.0"
pytest-xdist = "^3.5.0"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-n auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
